# -23211121

./: README.md  first.md
opencv_first/: CMakeLists.txt  opencv_first.cpp
